fixed cart spacing

--- a/public/style.css
+++ b/public/style.css
@@ -88,3 +88,7 @@ nav#footer-main {
   flex-direction: column;
   align-items: center;
 }
+
+.userDeleteBtn {
+  margin-left: 1em;
+}
